fixed setingTime.html.bug1-iphone:ajax,input time text-alignCenter

--- a/app/static/app/css/personal.css
+++ b/app/static/app/css/personal.css
@@ -94,7 +94,7 @@ a.button.addBtn{
   float: none;
 }
 .fixed_foort{
-  margin: 20% auto;
+  margin: 1.2rem auto;
 }
 .picker-item{
   padding:0;
